python/versioned_docs/version-1.23/api/class-browser.mdx
---
id: class-browser
title: "Browser"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [EventEmitter]

A Browser is created via [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser-type-launch). An example of using a [Browser] to create a [Page]:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    firefox = playwright.firefox
    browser = firefox.launch()
    page = browser.new_page()
    page.goto("https://example.com")
    browser.close()

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    firefox = playwright.firefox
    browser = await firefox.launch()
    page = await browser.new_page()
    await page.goto("https://example.com")
    await browser.close()

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>


- [browser.on("disconnected")](./api/class-browser.mdx#browser-event-disconnected)
- [browser.browser_type](./api/class-browser.mdx#browser-browser-type)
- [browser.close()](./api/class-browser.mdx#browser-close)
- [browser.contexts](./api/class-browser.mdx#browser-contexts)
- [browser.is_connected()](./api/class-browser.mdx#browser-is-connected)
- [browser.new_browser_cdp_session()](./api/class-browser.mdx#browser-new-browser-cdp-session)
- [browser.new_context(**kwargs)](./api/class-browser.mdx#browser-new-context)
- [browser.new_page(**kwargs)](./api/class-browser.mdx#browser-new-page)
- [browser.start_tracing(**kwargs)](./api/class-browser.mdx#browser-start-tracing)
- [browser.stop_tracing()](./api/class-browser.mdx#browser-stop-tracing)
- [browser.version](./api/class-browser.mdx#browser-version)

## browser.on("disconnected") {#browser-event-disconnected}
- type: &#60;[Browser]&#62;

Emitted when Browser gets disconnected from the browser application. This might happen because of one of the following:
* Browser application is closed or crashed.
* The [browser.close()](./api/class-browser.mdx#browser-close) method was called.

## browser.browser_type {#browser-browser-type}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-browser-type-return"/> &#60;[BrowserType]&#62;<a href="#browser-browser-type-return" class="list-anchor">#</a>

Get the browser type (chromium, firefox or webkit) that the browser belongs to.

## browser.close() {#browser-close}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-close-return"/> &#60;[NoneType]&#62;<a href="#browser-close-return" class="list-anchor">#</a>

In case this browser is obtained using [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser-type-launch), closes the browser and all of its pages (if any were opened).

In case this browser is connected to, clears all created contexts belonging to this browser and disconnects from the browser server.

The [Browser] object itself is considered to be disposed and cannot be used anymore.

## browser.contexts {#browser-contexts}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-contexts-return"/> &#60;[List]\[[BrowserContext]\]&#62;<a href="#browser-contexts-return" class="list-anchor">#</a>

Returns an array of all open browser contexts. In a newly created browser, this will return zero browser contexts.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = pw.webkit.launch()
print(len(browser.contexts())) # prints `0`
context = browser.new_context()
print(len(browser.contexts())) # prints `1`
```

</TabItem>
<TabItem value="async">

```py
browser = await pw.webkit.launch()
print(len(browser.contexts())) # prints `0`
context = await browser.new_context()
print(len(browser.contexts())) # prints `1`
```

</TabItem>
</Tabs>

## browser.is_connected() {#browser-is-connected}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-is-connected-return"/> &#60;[bool]&#62;<a href="#browser-is-connected-return" class="list-anchor">#</a>

Indicates that the browser is connected.

## browser.new_browser_cdp_session() {#browser-new-browser-cdp-session}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-browser-cdp-session-return"/> &#60;[CDPSession]&#62;<a href="#browser-new-browser-cdp-session-return" class="list-anchor">#</a>

:::note
CDP Sessions are only supported on Chromium-based browsers.
:::

Returns the newly created browser session.

## browser.new_context(**kwargs) {#browser-new-context}
- `accept_downloads`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-accept-downloads"/> &#60;[bool]&#62; Whether to automatically download all the attachments. Defaults to `true` where all the downloads are accepted.<a href="#browser-new-context-option-accept-downloads" class="list-anchor">#</a>
- `base_url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-base-url"/> &#60;[str]&#62; When using [page.goto(url, **kwargs)](./api/class-page.mdx#page-goto), [page.route(url, handler, **kwargs)](./api/class-page.mdx#page-route), [page.wait_for_url(url, **kwargs)](./api/class-page.mdx#page-wait-for-url), [page.expect_request(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-request), or [page.expect_response(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#browser-new-context-option-base-url" class="list-anchor">#</a>
  * baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
  * baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
  * baseURL: `http://localhost:3000/foo` (without trailing slash) and navigating to `./bar.html` results in `http://localhost:3000/bar.html`
- `bypass_csp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-bypass-csp"/> &#60;[bool]&#62; Toggles bypassing page's Content-Security-Policy.<a href="#browser-new-context-option-bypass-csp" class="list-anchor">#</a>
- `color_scheme`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-color-scheme"/> &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.<a href="#browser-new-context-option-color-scheme" class="list-anchor">#</a>
- `device_scale_factor`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-device-scale-factor"/> &#60;[float]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.<a href="#browser-new-context-option-device-scale-factor" class="list-anchor">#</a>
- `extra_http_headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-extra-http-headers"/> &#60;[Dict]\[[str], [str]\]&#62; An object containing additional HTTP headers to be sent with every request.<a href="#browser-new-context-option-extra-http-headers" class="list-anchor">#</a>
- `forced_colors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-forced-colors"/> &#60;"active"|"none"&#62; Emulates `'forced-colors'` media feature, supported values are `'active'`, `'none'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'none'`.<a href="#browser-new-context-option-forced-colors" class="list-anchor">#</a>

  :::note
  It's not supported in WebKit, see [here](https://bugs.webkit.org/show_bug.cgi?id=225281) in their issue tracker.
  :::

- `geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-geolocation"/> &#60;[Dict]&#62;<a href="#browser-new-context-option-geolocation" class="list-anchor">#</a>
  - `latitude` &#60;[float]&#62; Latitude between -90 and 90.
  - `longitude` &#60;[float]&#62; Longitude between -180 and 180.
  - `accuracy` &#60;[float]&#62; Non-negative accuracy value. Defaults to `0`.
- `has_touch`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-has-touch"/> &#60;[bool]&#62; Specifies if viewport supports touch events. Defaults to false.<a href="#browser-new-context-option-has-touch" class="list-anchor">#</a>
- `http_credentials`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-http-credentials"/> &#60;[Dict]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#browser-new-context-option-http-credentials" class="list-anchor">#</a>
  - `username` &#60;[str]&#62;
  - `password` &#60;[str]&#62;
- `ignore_https_errors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-ignore-https-errors"/> &#60;[bool]&#62; Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.<a href="#browser-new-context-option-ignore-https-errors" class="list-anchor">#</a>
- `is_mobile`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-is-mobile"/> &#60;[bool]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.<a href="#browser-new-context-option-is-mobile" class="list-anchor">#</a>
- `java_script_enabled`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-java-script-enabled"/> &#60;[bool]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.<a href="#browser-new-context-option-java-script-enabled" class="list-anchor">#</a>
- `locale`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-locale"/> &#60;[str]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.<a href="#browser-new-context-option-locale" class="list-anchor">#</a>
- `no_viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-no-viewport"/> &#60;[bool]&#62; Does not enforce fixed viewport, allows resizing window in the headed mode.<a href="#browser-new-context-option-no-viewport" class="list-anchor">#</a>
- `offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-offline"/> &#60;[bool]&#62; Whether to emulate network being offline. Defaults to `false`.<a href="#browser-new-context-option-offline" class="list-anchor">#</a>
- `permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-permissions"/> &#60;[List]\[[str]\]&#62; A list of permissions to grant to all pages in this context. See [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.<a href="#browser-new-context-option-permissions" class="list-anchor">#</a>
- `proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-proxy"/> &#60;[Dict]&#62; Network proxy settings to use with this context.<a href="#browser-new-context-option-proxy" class="list-anchor">#</a>
  - `server` &#60;[str]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` &#60;[str]&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` &#60;[str]&#62; Optional username to use if HTTP proxy requires authentication.
  - `password` &#60;[str]&#62; Optional password to use if HTTP proxy requires authentication.

  <br />

  :::note
  For Chromium on Windows the browser needs to be launched with the global proxy for this option to work. If all contexts override the proxy, global proxy will be never used and can be any string, for example `launch({ proxy: { server: 'http://per-context' } })`.
  :::

- `record_har_omit_content`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-record-har-omit-content"/> &#60;[bool]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.<a href="#browser-new-context-option-record-har-omit-content" class="list-anchor">#</a>
- `record_har_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-record-har-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.<a href="#browser-new-context-option-record-har-path" class="list-anchor">#</a>
- `record_har_url_filter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-record-har-url-filter"/> &#60;[str]|[Pattern]&#62;<a href="#browser-new-context-option-record-har-url-filter" class="list-anchor">#</a>
- `record_video_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-record-video-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.<a href="#browser-new-context-option-record-video-dir" class="list-anchor">#</a>
- `record_video_size`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-record-video-size"/> &#60;[Dict]&#62; Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.<a href="#browser-new-context-option-record-video-size" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; Video frame width.
  - `height` &#60;[int]&#62; Video frame height.
- `reduced_motion`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-reduced-motion"/> &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.<a href="#browser-new-context-option-reduced-motion" class="list-anchor">#</a>
- `screen`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-screen"/> &#60;[Dict]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.<a href="#browser-new-context-option-screen" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- `service_workers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-service-workers"/> &#60;"allow"|"block"&#62; Whether to allow sites to register Service workers. Defaults to `'allow'`.<a href="#browser-new-context-option-service-workers" class="list-anchor">#</a>
  * `'allow'`: [Service Workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API) can be registered.
  * `'block'`: Playwright will block all registration of Service Workers.
- `storage_state`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-storage-state"/> &#60;[Union]\[[str], [pathlib.Path]\]|[Dict]&#62; Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [browser_context.storage_state(**kwargs)](./api/class-browsercontext.mdx#browser-context-storage-state). Either a path to the file with saved storage, or an object with the following fields:<a href="#browser-new-context-option-storage-state" class="list-anchor">#</a>
  - `cookies` &#60;[List]\[[Dict]\]&#62; cookies to set for context
    - `name` &#60;[str]&#62;
    - `value` &#60;[str]&#62;
    - `domain` &#60;[str]&#62; domain and path are required
    - `path` &#60;[str]&#62; domain and path are required
    - `expires` &#60;[float]&#62; Unix time in seconds.
    - `httpOnly` &#60;[bool]&#62;
    - `secure` &#60;[bool]&#62;
    - `sameSite` &#60;"Strict"|"Lax"|"None"&#62; sameSite flag
  - `origins` &#60;[List]\[[Dict]\]&#62; localStorage to set for context
    - `origin` &#60;[str]&#62;
    - `localStorage` &#60;[List]\[[Dict]\]&#62;
      - `name` &#60;[str]&#62;
      - `value` &#60;[str]&#62;
- `strict_selectors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-strict-selectors"/> &#60;[bool]&#62; If specified, enables strict selectors mode for this context. In the strict selectors mode all operations on selectors that imply single target DOM element will throw when more than one element matches the selector. See [Locator] to learn more about the strict mode.<a href="#browser-new-context-option-strict-selectors" class="list-anchor">#</a>
- `timezone_id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-timezone-id"/> &#60;[str]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.<a href="#browser-new-context-option-timezone-id" class="list-anchor">#</a>
- `user_agent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-user-agent"/> &#60;[str]&#62; Specific user agent to use in this context.<a href="#browser-new-context-option-user-agent" class="list-anchor">#</a>
- `viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-option-viewport"/> &#60;[NoneType]|[Dict]&#62; Sets a consistent viewport for each page. Defaults to an 1280x720 viewport. `no_viewport` disables the fixed viewport.<a href="#browser-new-context-option-viewport" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-context-return"/> &#60;[BrowserContext]&#62;<a href="#browser-new-context-return" class="list-anchor">#</a>

Creates a new browser context. It won't share cookies/cache with other browser contexts.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = playwright.firefox.launch() # or "chromium" or "webkit".
# create a new incognito browser context.
context = browser.new_context()
# create a new page in a pristine context.
page = context.new_page()
page.goto("https://example.com")
```

</TabItem>
<TabItem value="async">

```py
browser = await playwright.firefox.launch() # or "chromium" or "webkit".
# create a new incognito browser context.
context = await browser.new_context()
# create a new page in a pristine context.
page = await context.new_page()
await page.goto("https://example.com")
```

</TabItem>
</Tabs>

## browser.new_page(**kwargs) {#browser-new-page}
- `accept_downloads`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-accept-downloads"/> &#60;[bool]&#62; Whether to automatically download all the attachments. Defaults to `true` where all the downloads are accepted.<a href="#browser-new-page-option-accept-downloads" class="list-anchor">#</a>
- `base_url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-base-url"/> &#60;[str]&#62; When using [page.goto(url, **kwargs)](./api/class-page.mdx#page-goto), [page.route(url, handler, **kwargs)](./api/class-page.mdx#page-route), [page.wait_for_url(url, **kwargs)](./api/class-page.mdx#page-wait-for-url), [page.expect_request(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-request), or [page.expect_response(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#browser-new-page-option-base-url" class="list-anchor">#</a>
  * baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
  * baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
  * baseURL: `http://localhost:3000/foo` (without trailing slash) and navigating to `./bar.html` results in `http://localhost:3000/bar.html`
- `bypass_csp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-bypass-csp"/> &#60;[bool]&#62; Toggles bypassing page's Content-Security-Policy.<a href="#browser-new-page-option-bypass-csp" class="list-anchor">#</a>
- `color_scheme`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-color-scheme"/> &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.<a href="#browser-new-page-option-color-scheme" class="list-anchor">#</a>
- `device_scale_factor`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-device-scale-factor"/> &#60;[float]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.<a href="#browser-new-page-option-device-scale-factor" class="list-anchor">#</a>
- `extra_http_headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-extra-http-headers"/> &#60;[Dict]\[[str], [str]\]&#62; An object containing additional HTTP headers to be sent with every request.<a href="#browser-new-page-option-extra-http-headers" class="list-anchor">#</a>
- `forced_colors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-forced-colors"/> &#60;"active"|"none"&#62; Emulates `'forced-colors'` media feature, supported values are `'active'`, `'none'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'none'`.<a href="#browser-new-page-option-forced-colors" class="list-anchor">#</a>

  :::note
  It's not supported in WebKit, see [here](https://bugs.webkit.org/show_bug.cgi?id=225281) in their issue tracker.
  :::

- `geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-geolocation"/> &#60;[Dict]&#62;<a href="#browser-new-page-option-geolocation" class="list-anchor">#</a>
  - `latitude` &#60;[float]&#62; Latitude between -90 and 90.
  - `longitude` &#60;[float]&#62; Longitude between -180 and 180.
  - `accuracy` &#60;[float]&#62; Non-negative accuracy value. Defaults to `0`.
- `has_touch`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-has-touch"/> &#60;[bool]&#62; Specifies if viewport supports touch events. Defaults to false.<a href="#browser-new-page-option-has-touch" class="list-anchor">#</a>
- `http_credentials`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-http-credentials"/> &#60;[Dict]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#browser-new-page-option-http-credentials" class="list-anchor">#</a>
  - `username` &#60;[str]&#62;
  - `password` &#60;[str]&#62;
- `ignore_https_errors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-ignore-https-errors"/> &#60;[bool]&#62; Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.<a href="#browser-new-page-option-ignore-https-errors" class="list-anchor">#</a>
- `is_mobile`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-is-mobile"/> &#60;[bool]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.<a href="#browser-new-page-option-is-mobile" class="list-anchor">#</a>
- `java_script_enabled`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-java-script-enabled"/> &#60;[bool]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.<a href="#browser-new-page-option-java-script-enabled" class="list-anchor">#</a>
- `locale`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-locale"/> &#60;[str]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.<a href="#browser-new-page-option-locale" class="list-anchor">#</a>
- `no_viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-no-viewport"/> &#60;[bool]&#62; Does not enforce fixed viewport, allows resizing window in the headed mode.<a href="#browser-new-page-option-no-viewport" class="list-anchor">#</a>
- `offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-offline"/> &#60;[bool]&#62; Whether to emulate network being offline. Defaults to `false`.<a href="#browser-new-page-option-offline" class="list-anchor">#</a>
- `permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-permissions"/> &#60;[List]\[[str]\]&#62; A list of permissions to grant to all pages in this context. See [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.<a href="#browser-new-page-option-permissions" class="list-anchor">#</a>
- `proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-proxy"/> &#60;[Dict]&#62; Network proxy settings to use with this context.<a href="#browser-new-page-option-proxy" class="list-anchor">#</a>
  - `server` &#60;[str]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` &#60;[str]&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` &#60;[str]&#62; Optional username to use if HTTP proxy requires authentication.
  - `password` &#60;[str]&#62; Optional password to use if HTTP proxy requires authentication.

  <br />

  :::note
  For Chromium on Windows the browser needs to be launched with the global proxy for this option to work. If all contexts override the proxy, global proxy will be never used and can be any string, for example `launch({ proxy: { server: 'http://per-context' } })`.
  :::

- `record_har_omit_content`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-record-har-omit-content"/> &#60;[bool]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.<a href="#browser-new-page-option-record-har-omit-content" class="list-anchor">#</a>
- `record_har_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-record-har-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.<a href="#browser-new-page-option-record-har-path" class="list-anchor">#</a>
- `record_har_url_filter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-record-har-url-filter"/> &#60;[str]|[Pattern]&#62;<a href="#browser-new-page-option-record-har-url-filter" class="list-anchor">#</a>
- `record_video_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-record-video-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.<a href="#browser-new-page-option-record-video-dir" class="list-anchor">#</a>
- `record_video_size`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-record-video-size"/> &#60;[Dict]&#62; Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.<a href="#browser-new-page-option-record-video-size" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; Video frame width.
  - `height` &#60;[int]&#62; Video frame height.
- `reduced_motion`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-reduced-motion"/> &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.<a href="#browser-new-page-option-reduced-motion" class="list-anchor">#</a>
- `screen`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-screen"/> &#60;[Dict]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.<a href="#browser-new-page-option-screen" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- `service_workers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-service-workers"/> &#60;"allow"|"block"&#62; Whether to allow sites to register Service workers. Defaults to `'allow'`.<a href="#browser-new-page-option-service-workers" class="list-anchor">#</a>
  * `'allow'`: [Service Workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API) can be registered.
  * `'block'`: Playwright will block all registration of Service Workers.
- `storage_state`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-storage-state"/> &#60;[Union]\[[str], [pathlib.Path]\]|[Dict]&#62; Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [browser_context.storage_state(**kwargs)](./api/class-browsercontext.mdx#browser-context-storage-state). Either a path to the file with saved storage, or an object with the following fields:<a href="#browser-new-page-option-storage-state" class="list-anchor">#</a>
  - `cookies` &#60;[List]\[[Dict]\]&#62; cookies to set for context
    - `name` &#60;[str]&#62;
    - `value` &#60;[str]&#62;
    - `domain` &#60;[str]&#62; domain and path are required
    - `path` &#60;[str]&#62; domain and path are required
    - `expires` &#60;[float]&#62; Unix time in seconds.
    - `httpOnly` &#60;[bool]&#62;
    - `secure` &#60;[bool]&#62;
    - `sameSite` &#60;"Strict"|"Lax"|"None"&#62; sameSite flag
  - `origins` &#60;[List]\[[Dict]\]&#62; localStorage to set for context
    - `origin` &#60;[str]&#62;
    - `localStorage` &#60;[List]\[[Dict]\]&#62;
      - `name` &#60;[str]&#62;
      - `value` &#60;[str]&#62;
- `strict_selectors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-strict-selectors"/> &#60;[bool]&#62; If specified, enables strict selectors mode for this context. In the strict selectors mode all operations on selectors that imply single target DOM element will throw when more than one element matches the selector. See [Locator] to learn more about the strict mode.<a href="#browser-new-page-option-strict-selectors" class="list-anchor">#</a>
- `timezone_id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-timezone-id"/> &#60;[str]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.<a href="#browser-new-page-option-timezone-id" class="list-anchor">#</a>
- `user_agent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-user-agent"/> &#60;[str]&#62; Specific user agent to use in this context.<a href="#browser-new-page-option-user-agent" class="list-anchor">#</a>
- `viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-option-viewport"/> &#60;[NoneType]|[Dict]&#62; Sets a consistent viewport for each page. Defaults to an 1280x720 viewport. `no_viewport` disables the fixed viewport.<a href="#browser-new-page-option-viewport" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-new-page-return"/> &#60;[Page]&#62;<a href="#browser-new-page-return" class="list-anchor">#</a>

Creates a new page in a new browser context. Closing this page will close the context as well.

This is a convenience API that should only be used for the single-page scenarios and short snippets. Production code and testing frameworks should explicitly create [browser.new_context(**kwargs)](./api/class-browser.mdx#browser-new-context) followed by the [browser_context.new_page()](./api/class-browsercontext.mdx#browser-context-new-page) to control their exact life times.

## browser.start_tracing(**kwargs) {#browser-start-tracing}
- `page`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-start-tracing-option-page"/> &#60;[Page]&#62; Optional, if specified, tracing includes screenshots of the given page.<a href="#browser-start-tracing-option-page" class="list-anchor">#</a>
- `categories`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-start-tracing-option-categories"/> &#60;[List]\[[str]\]&#62; specify custom categories to use instead of default.<a href="#browser-start-tracing-option-categories" class="list-anchor">#</a>
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-start-tracing-option-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; A path to write the trace file to.<a href="#browser-start-tracing-option-path" class="list-anchor">#</a>
- `screenshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-start-tracing-option-screenshots"/> &#60;[bool]&#62; captures screenshots in the trace.<a href="#browser-start-tracing-option-screenshots" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-start-tracing-return"/> &#60;[NoneType]&#62;<a href="#browser-start-tracing-return" class="list-anchor">#</a>

:::note
This API controls [Chromium Tracing](https://www.chromium.org/developers/how-tos/trace-event-profiling-tool) which is a low-level chromium-specific debugging tool. API to control [Playwright Tracing](../trace-viewer) could be found [here](./class-tracing).
:::

You can use [browser.start_tracing(**kwargs)](./api/class-browser.mdx#browser-start-tracing) and [browser.stop_tracing()](./api/class-browser.mdx#browser-stop-tracing) to create a trace file that can be opened in Chrome DevTools performance panel.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser.start_tracing(page, path="trace.json")
page.goto("https://www.google.com")
browser.stop_tracing()
```

</TabItem>
<TabItem value="async">

```py
await browser.start_tracing(page, path="trace.json")
await page.goto("https://www.google.com")
await browser.stop_tracing()
```

</TabItem>
</Tabs>

## browser.stop_tracing() {#browser-stop-tracing}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-stop-tracing-return"/> &#60;[bytes]&#62;<a href="#browser-stop-tracing-return" class="list-anchor">#</a>

:::note
This API controls [Chromium Tracing](https://www.chromium.org/developers/how-tos/trace-event-profiling-tool) which is a low-level chromium-specific debugging tool. API to control [Playwright Tracing](../trace-viewer) could be found [here](./class-tracing).
:::

Returns the buffer with trace data.

## browser.version {#browser-version}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-version-return"/> &#60;[str]&#62;<a href="#browser-version-return" class="list-anchor">#</a>

Returns the browser version.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
